# ME700-Assignment-1-Part-2

./: README.md  assignment_1_genAIuse.txt  pyproject.toml
.github/workflows/: prerun_tests.yml  python-package.yml
src/hardeningmodel/: hardening_model.py
tests/: hardeningmodel.py  test_hardening_solver.py
tutorials/: tutorial_hardeningmodel.py
