[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ME700-Assignment-1-Part-2"
version = "0.0.0"
authors = [
  { name="Alexander Kochling", email="akoch23@bu.edu" },
]
description = "elastic hardening model workflow"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/akoch23/ME700-Assignment-1-Part-2/tree/main"
